# tempodash

./: README.md  config.json  pyproject.toml  tox.ini
examples/: config.json  report_config.json  runtempodash.sh
tempodash/: __init__.py  __main__.py  agg.py  aggcsv.py  aggplot.py  airnow.py  cfg.py  config.py  core.py  dates.py  defn.py  get.py  intx.py  markdown.py  odrfit.py  pair.py  pandora.py  plot.py  plots.py  tempo.py  tropomi.py  util.py  word.py
