[project]
name = "tempodash"
authors = [
  {email = "barronh@gmail.com"},
  {name = "Barron H. Henderson"}
]
description = "Evaluation platform for TEMPO compared to TropOMI, Pandora, and AirNow"
readme = "README.md"
license = { file = "LICENSE" }
version = "1.0.0"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "matplotlib",
    "scipy",
    "pandas",
    "geopandas",
    "pycno",
    "pyrsig",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["tempodash"]
